--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
 <body>
   <div class="home">
     <div class="place Paris">
+      <img class="place-image" src="./images/Paris.png" alt="">
       <h1 class="order-number">01</h1>
       <h2 class="place-name">PARIS</h2>
     </div>
     <div class="place Dubai">
+      <img class="place-image" src="./images/Dubai.png" alt="">
       <h1 class="order-number">02</h1>
       <h2 class="place-name">DUBAI</h2>
     </div>
     <div class="place Brazil">
+      <img class="place-image" src="./images/Brazil.png" alt="">
       <h1 class="order-number">03</h1>
       <h2 class="place-name">BRAZIL</h2>
     </div>
     <div class="place India">
+      <img class="place-image" src="./images/India.png" alt="">
       <h1 class="order-number">04</h1>
       <h2 class="place-name">INDIA</h2>
     </div>
