--- a/index.html
+++ b/index.html
@@ -13,21 +13,45 @@
       <img class="place-image" src="./images/Paris.png" alt="">
       <h1 class="order-number">01</h1>
       <h2 class="place-name">PARIS</h2>
+      <div class="place-introduction">
+        <div class="place-introduction-order-number">01</div>
+        <h1 class="place-introduction-title">Dubai</h1>
+        <p class="place-introduction-text">The Emirate's Western-style model of business drives its economy with the main revenues now coming from tourism, aviation, real estate, and financial services. Dubai was recently named the best destination for Muslim travellers by Salam Standard.</p>
+        <div class="read-more">Read More</div>
+      </div>
     </div>
     <div class="place Dubai">
       <img class="place-image" src="./images/Dubai.png" alt="">
       <h1 class="order-number">02</h1>
       <h2 class="place-name">DUBAI</h2>
+      <div class="place-introduction">
+        <div class="place-introduction-order-number">02</div>
+        <h1 class="place-introduction-title">Dubai</h1>
+        <p class="place-introduction-text">The Emirate's Western-style model of business drives its economy with the main revenues now coming from tourism, aviation, real estate, and financial services. Dubai was recently named the best destination for Muslim travellers by Salam Standard.</p>
+        <div class="read-more">Read More</div>
+      </div>
     </div>
     <div class="place Brazil">
       <img class="place-image" src="./images/Brazil.png" alt="">
       <h1 class="order-number">03</h1>
       <h2 class="place-name">BRAZIL</h2>
+      <div class="place-introduction">
+        <div class="place-introduction-order-number">03</div>
+        <h1 class="place-introduction-title">Dubai</h1>
+        <p class="place-introduction-text">The Emirate's Western-style model of business drives its economy with the main revenues now coming from tourism, aviation, real estate, and financial services. Dubai was recently named the best destination for Muslim travellers by Salam Standard.</p>
+        <div class="read-more">Read More</div>
+      </div>
     </div>
     <div class="place India">
       <img class="place-image" src="./images/India.png" alt="">
       <h1 class="order-number">04</h1>
       <h2 class="place-name">INDIA</h2>
+      <div class="place-introduction">
+        <div class="place-introduction-order-number">04</div>
+        <h1 class="place-introduction-title">India</h1>
+        <p class="place-introduction-text">India is a vast South Asian country with diverse terrain – from Himalayan peaks to Indian Ocean coastline.  In the north, Mughal Empire landmarks include Delhi’s Red Fort complex and massive Jama Masjid mosque, plus Agra’s iconic Taj Mahal mausoleum. </p>
+        <div class="read-more">Read More</div>
+      </div>
     </div>
   </div>
   <script src="./js/index.js"></script>
