add: 完成place-introduction元素及其子元素的过渡样式

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
       <h2 class="place-name">PARIS</h2>
       <div class="place-introduction">
         <div class="place-introduction-order-number">01</div>
-        <h1 class="place-introduction-title">Paris</h1>
-        <p class="place-introduction-text">Paris is the capital and most populous city of France, with an area of 105 square kilometres (41 square miles) and a population of 2,206,488. Since the 17th century, Paris has been one of Europe's major centres of finance, commerce, fashion, science, and the arts.</p>
-        <div class="read-more">Read More</div>
+        <div class="place-introduction-content">
+          <h1 class="place-introduction-title">Paris</h1>
+          <p class="place-introduction-text">Paris is the capital and most populous city of France, with an area of 105 square kilometres (41 square miles) and a population of 2,206,488. Since the 17th century, Paris has been one of Europe's major centres of finance, commerce, fashion, science, and the arts.</p>
+          <div class="read-more">Read More</div>
+        </div>
       </div>
     </div>
     <div class="place Dubai">
@@ -26,9 +28,11 @@
       <h2 class="place-name">DUBAI</h2>
       <div class="place-introduction">
         <div class="place-introduction-order-number">02</div>
-        <h1 class="place-introduction-title">Dubai</h1>
-        <p class="place-introduction-text">The Emirate's Western-style model of business drives its economy with the main revenues now coming from tourism, aviation, real estate, and financial services. Dubai was recently named the best destination for Muslim travellers by Salam Standard.</p>
-        <div class="read-more">Read More</div>
+        <div class="place-introduction-content">
+          <h1 class="place-introduction-title">Dubai</h1>
+          <p class="place-introduction-text">The Emirate's Western-style model of business drives its economy with the main revenues now coming from tourism, aviation, real estate, and financial services. Dubai was recently named the best destination for Muslim travellers by Salam Standard.</p>
+          <div class="read-more">Read More</div>
+        </div>
       </div>
     </div>
     <div class="place Brazil">
@@ -37,9 +41,11 @@
       <h2 class="place-name">BRAZIL</h2>
       <div class="place-introduction">
         <div class="place-introduction-order-number">03</div>
-        <h1 class="place-introduction-title">Brazil</h1>
-        <p class="place-introduction-text">Brazil is the largest country to have Portuguese as an official language and the only one in the Americas; it is also one of the most multicultural and ethnically diverse nations, due to over a century of mass immigration from around the world.</p>
-        <div class="read-more">Read More</div>
+        <div class="place-introduction-content">
+          <h1 class="place-introduction-title">Brazil</h1>
+          <p class="place-introduction-text">Brazil is the largest country to have Portuguese as an official language and the only one in the Americas; it is also one of the most multicultural and ethnically diverse nations, due to over a century of mass immigration from around the world.</p>
+          <div class="read-more">Read More</div>
+        </div>
       </div>
     </div>
     <div class="place India">
@@ -48,9 +54,11 @@
       <h2 class="place-name">INDIA</h2>
       <div class="place-introduction">
         <div class="place-introduction-order-number">04</div>
-        <h1 class="place-introduction-title">India</h1>
-        <p class="place-introduction-text">India is a vast South Asian country with diverse terrain – from Himalayan peaks to Indian Ocean coastline.  In the north, Mughal Empire landmarks include Delhi’s Red Fort complex and massive Jama Masjid mosque, plus Agra’s iconic Taj Mahal mausoleum.</p>
-        <div class="read-more">Read More</div>
+        <div class="place-introduction-content">
+          <h1 class="place-introduction-title">India</h1>
+          <p class="place-introduction-text">India is a vast South Asian country with diverse terrain – from Himalayan peaks to Indian Ocean coastline.  In the north, Mughal Empire landmarks include Delhi’s Red Fort complex and massive Jama Masjid mosque, plus Agra’s iconic Taj Mahal mausoleum.</p>
+          <div class="read-more">Read More</div>
+        </div>
       </div>
     </div>
   </div>
