add: 完成了place-introduction-close-btn元素的布局及其点击事件

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h1 class="order-number">01</h1>
       <h2 class="place-name">PARIS</h2>
       <div class="place-introduction">
+        <button class="place-introduction-close-btn"></button>
         <div class="place-introduction-order-number">01</div>
         <div class="place-introduction-content">
           <h1 class="place-introduction-title">Paris</h1>
@@ -27,6 +28,7 @@
       <h1 class="order-number">02</h1>
       <h2 class="place-name">DUBAI</h2>
       <div class="place-introduction">
+        <button class="place-introduction-close-btn"></button>
         <div class="place-introduction-order-number">02</div>
         <div class="place-introduction-content">
           <h1 class="place-introduction-title">Dubai</h1>
@@ -40,6 +42,7 @@
       <h1 class="order-number">03</h1>
       <h2 class="place-name">BRAZIL</h2>
       <div class="place-introduction">
+        <button class="place-introduction-close-btn"></button>
         <div class="place-introduction-order-number">03</div>
         <div class="place-introduction-content">
           <h1 class="place-introduction-title">Brazil</h1>
@@ -53,6 +56,7 @@
       <h1 class="order-number">04</h1>
       <h2 class="place-name">INDIA</h2>
       <div class="place-introduction">
+        <button class="place-introduction-close-btn"></button>
         <div class="place-introduction-order-number">04</div>
         <div class="place-introduction-content">
           <h1 class="place-introduction-title">India</h1>
