add: 增加了logo元素并完成了其样式

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div class="home">
+    <div class="logo"></div>
     <div class="place Paris">
       <img class="place-image" src="./images/Paris.png" alt="">
       <h1 class="order-number">01</h1>
